--- a/index.html
+++ b/index.html
@@ -18,9 +18,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body class="fullscreen">
-        <div class="container">
-            <h1 class="title">Hello World!</h1>
+        <div class='radar'>
+            <div class='sweep'></div>
         </div>
-        <script src="/js/main.js"></script>
+        <noscript>
+            <div class='radar'>
+                <div class='sweep'></div>
+            </div>
+        </noscript>
+
+
+        <script src="js/main.js"></script>
+        <script>
+            if('serviceWorker' in navigator) {
+                navigator.serviceWorker.register('/sw.js')
+                .then(function() {
+                        console.log('Service Worker Registered');
+                });
+            }
+        </script>
     </body>
 </html>
